# gravo_mg

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml
demos/: conformal_flow.py  conformal_flow_pointcloud.py  smoothing.py
experiments/python/: comparisons.py  comparisons_to_table.py  util.py
experiments/table_scripts/: ablations_sampling.sh  ablations_selection.sh  ablations_weighting.sh  comparison_poisson.sh  comparison_smoothing.sh  convergence_plots.sh
gravomg/: CMakeLists.txt
gravomg/include/gravomg/: multigrid_solver.h  sampling.h  utility.h
gravomg/src/: multigrid_solver.cpp  sampling.cpp  utility.cpp
gravomg/src/sig21/: SSP_collapse_edge.cpp  SSP_collapse_edge.h  SSP_decimate.cpp  SSP_decimate.h  SSP_midpoint.cpp  SSP_midpoint.h  SSP_qslim.cpp  SSP_qslim.h  SSP_qslim_optimal_collapse_edge_callbacks.cpp  SSP_qslim_optimal_collapse_edge_callbacks.h  SSP_vertexRemoval.cpp  SSP_vertexRemoval.h  SSP_vertexRemoval_optimal_collapse_edge_callbacks.cpp  SSP_vertexRemoval_optimal_collapse_edge_callbacks.h  always_try_never_care.cpp  always_try_never_care.h  compute_barycentric.cpp  compute_barycentric.h  compute_vertex_quadrics.cpp  compute_vertex_quadrics.h  cotmatrix_dense.cpp  cotmatrix_dense.h  decimate_func_types.h  get_collapse_onering_faces.cpp  get_collapse_onering_faces.h  get_post_faces.cpp  get_post_faces.h  get_prolong.cpp  get_prolong.h  intersect_ordered.cpp  intersect_ordered.h  joint_lscm.cpp  joint_lscm.h  mg_VCycle.cpp  mg_VCycle.h  mg_data.h  mg_precompute.cpp  mg_precompute.h  mg_precompute_block.cpp  mg_precompute_block.h  (+26 more)
gravomg_bindings/: CMakeLists.txt  README.md  setup.py
gravomg_bindings/src/cpp/: core.cpp
gravomg_bindings/src/gravomg/: __init__.py  core.py  util.py
